# selic-ibovespa-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/sample/: README.md  history_selic_meta.json
notebooks/: modelo__ibov_selic 1.ipynb  modelo__ibov_selic 2.ipynb  modelo__ibov_selic 3.ipynb  modelo__ibov_selic.ipynb  modelo__selic_ipca copy.ipynb  mqo_formula_explanation.md  teste_modelo.ipynb
notebooks/data/raw/: history_ibov.json  history_selic.json
scripts/: export_data.py
src/ibovselic/: __init__.py  cli.py  exporter.py  models.py
src/ibovselic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ibovselic/sources/: __init__.py  ibov.py  selic.py
